--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
+		"shapefile": "^0.6.6",
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"tailwindcss": "^4.0.0",
@@ -44,6 +45,9 @@
 		]
 	},
 	"dependencies": {
-		"d3": "^7.9.0"
+		"d3": "^7.9.0",
+		"d3-contour": "^4.0.2",
+		"d3-geo": "^3.1.1",
+		"proj4": "^2.20.2"
 	}
 }
